# aio

./: .gitignore  .lintstagedrc.mjs  README.md  github-issues.md  github-prs.md  package.json  pnpm-lock.yaml  vben-admin.code-workspace
.planning/plugin-platform/: PLAN.md  status.json
apps/web-ele/: .env  .env.development  index.html  package.json  vite.config.mts
docs/: architecture.md  plugin-platform.md
plugins/: README.md
plugins/asset-suite/: formula.json
plugins/git-suite/: formula.json
schemas/: plugin-diagnostics.v1.schema.json  plugin-draft.v1.schema.json  plugin-formula.v1.schema.json  plugin-publish-gate.v1.schema.json  plugin-signature-placeholder.v1.schema.json  plugin-ui-view.v1.schema.json  remote-registry-protocol.v0.schema.json  system-capsule.v1.schema.json
schemas/events/: platform-event-envelope.v1.schema.json  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/acp-openai-assistant/: Cargo.toml  README.md
src-tauri/crates/acp-openai-assistant/src/: context.rs  error.rs  lib.rs  openai.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 202605220001_init.sql  202605220002_skills.sql  202605220003_asset_items.sql  202605230001_asset_item_source_fields.sql  202605230002_asset_item_yaml_intelligence.sql  202605230003_asset_variables.sql  202605230004_agent_preferences.sql  202605250001_permission_consents.sql  202605250002_permission_approvals.sql  202605260001_note_content_hash.sql  202605260002_skill_sources.sql  202605260003_dotfiles_fusion.sql  202605260004_note_visibility.sql  202605260005_knowledge_base.sql  202605260006_app_settings.sql
src-tauri/src/: agent_preferences.rs  app_paths.rs  app_runtime.rs  app_settings.rs  asset_items.rs  asset_variables.rs  auth.rs  capability_broker.rs  commands.rs  db.rs  dictionary.rs  dotfiles.rs  error.rs  event_bus.rs  extension_host.rs  home_paths.rs  knowledge.rs  lib.rs  notes.rs  permission_approval.rs  permission_consent.rs  permission_core.rs  plugin_factory.rs  plugin_migration.rs  plugin_registry.rs  plugin_store.rs  rbac.rs  skills.rs  state.rs  web_bridge.rs
(+93 files in other folders)
