[package]
name = "aio"
version = "0.1.0"
description = "AIO local desktop admin app"
authors = ["zjarlin"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "aio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
acp-openai-assistant = { path = "./crates/acp-openai-assistant" }
axum = "0.8.5"
argon2 = { version = "0.5.3", features = ["std"] }
rand_core = { version = "0.6.4", features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_yml = "0.0.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
log = "0.4"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "migrate", "time", "uuid"] }
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
thiserror = "2.0.12"
time = { version = "0.3.47", features = ["formatting", "macros"] }
tokio = { version = "1.47.1", features = ["net", "sync", "time"] }
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.10.1"
