[package]
name = "acp-openai-assistant"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Page-context OpenAI assistant support for the AIO desktop app"
license = "MIT"
readme = "README.md"

[dependencies]
async-openai = { version = "0.40.2", default-features = false, features = ["byot", "responses", "rustls"] }
reqwest = { version = "0.13.3", default-features = false, features = ["charset", "rustls"] }
scraper = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
url = "2.5.7"
